Unreleased
  - Add mstl3_pack_ppupdate_flushidle() for packing idle streams in combination
  with the use of MSF_PPUPDATETIME during trace list additions

2025.257: v3.1.8
  - Fix segment removal from MS3TraceList when packing

2025.239:
  - Add mstl3_pack_segment()
  - Deprecate mstraceseg3_pack()
  - mstl3_addmsr()/mstl3_addmsr_recordptr(): Ensure segments represent time
  coverage before adding new samples.

2025.234: 3.1.7
  - Add ms_nstime2timestr_n() with string size limit, deprecate ms_nstime2timestr().
  - With ms_nstime2timestr_n() print "ERROR" for NSTERROR and "UNSET" for NSTUNSET.
  - Avoid fatal errors when v2 record blockettes contain invalid time stamps.
  When SEED "btime" values are encountered they are now set to NSTERROR and
  serialized in extra headers as "ERROR".
  - Limit float point values in extra headers to single precision to avoid
  unrealistically high precision values in the output
  - Update yyjson to v0.12.0

2025.227:
  - Properly round negative values when converting floats to integers
  in mstl3_convertsamples().

2025.207: 3.1.6
  - Properly propagate sub-fractional microseconds to v2 blockette 1001
  when packing more than one record.
  - Round sub-fractional and sub-microsecond times for v2 record fields
  to retain accuracy.
  - Ensure microsecond offsets in v2 record fields are -50 to +49, which
  matches previous major library version behavior and SEED recommendation.
  - Add msr3_repack_mseed2() to repack v2 records efficiently.
  - Add -s and -R options to example/lm_pack.c.
  - Fix some pedantic compiler warnings in msio.c.

2025.114: 3.1.5
  - Add new functions to libmseed.map and libmseed.def for public use.

2025.113: 3.1.4
  - Fix msr3_duplicate() to properly terminate duplicated extra headers.
  - Add mstraceseg3_pack() to individually packet MS3TraceSeg entries.
  - Add lmp_systemtime() to return current system time as nstime_t.
  - Add MS3Record_INITIALIZER for efficient heap initialization of an MS3Record.