@@ -274,70 +274,16 @@ mstl3_addID (MS3TraceList *mstl, MS3TraceID *id, MS3TraceID **prev)
   return id;
 } /* End of mstl3_addID() */
 
-/** ************************************************************************
- * @brief Add data coverage from an ::MS3Record to a ::MS3TraceList
+/***************************************************************************
+ * Implementation of MS3TraceList addition functions
  *
- * Searching the list for the appropriate ::MS3TraceID and
- * ::MS3TraceSeg and either add data to existing entries or create new
- * ones as needed.
- *
- * As this routine adds data to a trace list it constructs continuous
- * time series, merging segments when possible.  The \a tolerance
- * pointer to a ::MS3Tolerance identifies function pointers that are
- * expected to return time tolerance, in seconds, and sample rate
- * tolerance, in Hertz, for the given ::MS3Record.  If \a tolerance is
- * NULL, or the function pointers it identifies are NULL, default
- * tolerances will be used as follows: - Default time tolerance is 1/2
- * the sampling period - Default sample rate (sr) tolerance is
- * abs(1‐sr1/sr2) < 0.0001
- *
- * In recommended usage, the \a splitversion flag is \b 0 and
- * different publication versions of otherwise matching data are
- * merged.  If more than one version contributes to a given source
- * identifier's segments, its ::MS3TraceID.pubversion will be the set to
- * the largest contributing version.  If the \a splitversion flag is
- * \b 1 the publication versions will be kept separate with each
- * version isolated in separate ::MS3TraceID entries.
- *
- * If the \a autoheal flag is true, extra processing is invoked to
- * conjoin trace segments that fit together after the ::MS3Record
- * coverage is added.  For segments that are removed, any memory at
- * the ::MS3TraceSeg.prvtptr will be freed.
- *
- * If the \a pprecptr is not NULL a @ref record-list will be
- * maintained for each segment.  If the value of \c *pprecptr is NULL,
- * a new ::MS3RecordPtr will be allocated, otherwise the supplied
- * structure will be updated.  The ::MS3RecordPtr will be added to the
- * appropriate record list and the values of ::MS3RecordPtr.msr and
- * ::MS3RecordPtr.endtime will be set, all other fields should be set
- * by the caller.
- *
- * The lists are always maintained in a sorted order.  An
- * ::MS3TraceList is maintained with the ::MS3TraceID entries in
- * ascending alphanumeric order of SID. If repeated SIDs are present
- * due to splitting on publication version, they are maintained in
- * order of ascending version.  A ::MS3TraceID is always maintained
- * with ::MS3TraceSeg entries in data time time order.
- *
- * @param[in] mstl Destination ::MS3TraceList to add data to
- * @param[in] msr ::MS3Record containing the data to add to list
- * @param[in] pprecptr Pointer to pointer to a ::MS3RecordPtr for @ref record-list
- * @param[in] splitversion Flag to control splitting of version/quality
- * @param[in] autoheal Flag to control automatic merging of segments
- * @param[in] flags Flags to control optional functionality (unused)
- * @param[in] tolerance Tolerance function pointers as ::MS3Tolerance
- *
- * @returns a pointer to the ::MS3TraceSeg updated or NULL on error.
- *
- * \sa mstl3_readbuffer()
- * \sa ms3_readtracelist()
- *
- * \ref MessageOnError - this function logs a message on error
+ * \sa mstl3_addmsr()
+ * \sa mstl3_addmsr_recordptr()
  ***************************************************************************/
 MS3TraceSeg *
-mstl3_addmsr_recordptr (MS3TraceList *mstl, const MS3Record *msr, MS3RecordPtr **pprecptr,
-                        int8_t splitversion, int8_t autoheal, uint32_t flags,
-                        const MS3Tolerance *tolerance)
+_mstl3_addmsr_impl (MS3TraceList *mstl, const MS3Record *msr, MS3RecordPtr **pprecptr,
+                    int8_t splitversion, int8_t autoheal, uint32_t flags,
+                    const MS3Tolerance *tolerance)
 {
   (void)flags; /* Unused */
   MS3TraceID *id = NULL;
@@ -762,6 +708,89 @@ mstl3_addmsr_recordptr (MS3TraceList *mstl, const MS3Record *msr, MS3RecordPtr *
 
   return seg;
 } /* End of mstl3_addmsr_recordptr() */
+
+/** ************************************************************************
+ * @brief Add data coverage from an ::MS3Record to a ::MS3TraceList
+ *
+ * Searching the list for the appropriate ::MS3TraceID and
+ * ::MS3TraceSeg and either add data to existing entries or create new
+ * ones as needed.
+ *
+ * As this routine adds data to a trace list it constructs continuous
+ * time series, merging segments when possible.  The \a tolerance
+ * pointer to a ::MS3Tolerance identifies function pointers that are
+ * expected to return time tolerance, in seconds, and sample rate
+ * tolerance, in Hertz, for the given ::MS3Record.  If \a tolerance is
+ * NULL, or the function pointers it identifies are NULL, default
+ * tolerances will be used as follows: - Default time tolerance is 1/2
+ * the sampling period - Default sample rate (sr) tolerance is
+ * abs(1‐sr1/sr2) < 0.0001
+ *
+ * In recommended usage, the \a splitversion flag is \b 0 and
+ * different publication versions of otherwise matching data are
+ * merged.  If more than one version contributes to a given source
+ * identifier's segments, its ::MS3TraceID.pubversion will be the set to
+ * the largest contributing version.  If the \a splitversion flag is
+ * \b 1 the publication versions will be kept separate with each
+ * version isolated in separate ::MS3TraceID entries.
+ *
+ * If the \a autoheal flag is true, extra processing is invoked to
+ * conjoin trace segments that fit together after the ::MS3Record
+ * coverage is added.  For segments that are removed, any memory at
+ * the ::MS3TraceSeg.prvtptr will be freed.
+ *
+ * The lists are always maintained in a sorted order.  An
+ * ::MS3TraceList is maintained with the ::MS3TraceID entries in
+ * ascending alphanumeric order of SID. If repeated SIDs are present
+ * due to splitting on publication version, they are maintained in
+ * order of ascending version.  A ::MS3TraceID is always maintained
+ * with ::MS3TraceSeg entries in data time time order.
+ *
+ * @param[in] mstl Destination ::MS3TraceList to add data to
+ * @param[in] msr ::MS3Record containing the data to add to list
+ * @param[in] pprecptr Pointer to pointer to a ::MS3RecordPtr for @ref record-list
+ * @param[in] splitversion Flag to control splitting of version/quality
+ * @param[in] autoheal Flag to control automatic merging of segments
+ * @param[in] flags Flags to control optional functionality (unused)
+ * @param[in] tolerance Tolerance function pointers as ::MS3Tolerance
+ *
+ * @returns a pointer to the ::MS3TraceSeg updated or NULL on error.
+ *
+ * \sa mstl3_addmsr_recordptr()
+ * \sa mstl3_readbuffer()
+ * \sa ms3_readtracelist()
+ *
+ * \ref MessageOnError - this function logs a message on error
+ ***************************************************************************/
+MS3TraceSeg *
+mstl3_addmsr (MS3TraceList *mstl, const MS3Record *msr, int8_t splitversion, int8_t autoheal,
+              uint32_t flags, const MS3Tolerance *tolerance)
+{
+  return _mstl3_addmsr_impl (mstl, msr, NULL, splitversion, autoheal, flags, tolerance);
+}
+
+/** ************************************************************************
+ * @copydoc mstl3_pack()
+ *
+ * This function is identical to mstl3_addmsr() but with the additional \a
+ * pprecptr parameter:
+ *
+ * @param[in] pprecptr Pointer to pointer to a ::MS3RecordPtr for @ref record-list
+ *
+ * If the \a pprecptr is not NULL a @ref record-list will be maintained for each
+ * segment.  If the value of \c *pprecptr is NULL, a new ::MS3RecordPtr will be
+ * allocated, otherwise the supplied structure will be updated.  The
+ * ::MS3RecordPtr will be added to the appropriate record list and the values of
+ * ::MS3RecordPtr.msr and ::MS3RecordPtr.endtime will be set, all other fields
+ * should be set by the caller.
+ ***************************************************************************/
+MS3TraceSeg *
+mstl3_addmsr_recordptr (MS3TraceList *mstl, const MS3Record *msr, MS3RecordPtr **pprecptr,
+                        int8_t splitversion, int8_t autoheal, uint32_t flags,
+                        const MS3Tolerance *tolerance)
+{
+  return _mstl3_addmsr_impl (mstl, msr, pprecptr, splitversion, autoheal, flags, tolerance);
+}
 
 /** ************************************************************************
  * @brief Parse miniSEED from a buffer and populate a ::MS3TraceList
@@ -1863,7 +1892,7 @@ mstl3_unpack_recordlist (MS3TraceID *id, MS3TraceSeg *seg, void *output, uint64_
 /***************************************************************************
  * Implementation of MS3TraceList packing functions
  *
- * \sa msr3_pack()
+ * \sa mstl3_pack()
  * \sa mstl3_pack_ppupdate_flushidle()
  ***************************************************************************/
 int64_t
