@@ -1,6 +1,7 @@
 Unreleased
   - Add mstl3_pack_ppupdate_flushidle() for packing idle streams in combination
-  with the use of MSF_PPUPDATETIME during trace list additions
+  with the use of MSF_PPUPDATETIME during trace list additions.
+	- Convert mstl3_addmsr() to a real function from a macro.
 
 2025.257: v3.1.8
   - Fix segment removal from MS3TraceList when packing
